Added notification at create and update a post

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
     <%= post.content %>
     </div>
     <div class="comment-count">
-    <span class="tag is-rounded"><%= post.comments.count %> comments</span>
+    <span class="tag is-rounded"><%= post.comments.count %> Comments</span>
     </div>
     </div>
     </div>
