Displayed errorsif existing, and finishing the implementation of the posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,12 @@
+<% if @post.errors.any? %>
+<p><%= pluralize(@post.errors.count, 'error') %> prohibited this post from being saved:</p>
+<ul>
+  <% @post.errors.full_messages.each do |error| %>
+    <li><%= error %></li>
+    <% end %>
+</ul>
+<% end %>
+
 <div class="section">
 <%= simple_form_for @post do |f| %>
   <div class="field">
