--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for :page_title,  "Index" %>
+<p><%= notice %></p>
 <section class="section">
 <div class="container">
     <% @posts.each do |post| %>
