Added errors to display

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,12 @@
+<% if @post.comments.errors.any? %>
+<p><%= pluralize(@post.comments.errors.count, 'error') %> prohibited this post from being saved:</p>
+<ul>
+  <% @post.comments.errors.full_messages.each do |error| %>
+    <li><%= error %></li>
+    <% end %>
+</ul>
+<% end %>
+
 <%= simple_form_for([@post, @post.comments.build]) do |f| %>
 <!--
 collection.build(attributes = {}, …) Returns one or more new objects of the collection type that have been instantiated with attributes and linked to this object through a foreign key, but have not yet been saved. Note: This only works if an associated object already exists, not if it‘s nil!
